<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_class_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lessonName_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/className_hint" />

            <EditText
                android:id="@+id/lessonName_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="LessonName" />

            <TextView
                android:id="@+id/lessonType_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classType_hint" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/laboratoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/laboratory_course" />

                <RadioButton
                    android:id="@+id/lectureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lecture" />

                <RadioButton
                    android:id="@+id/practiceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/practice" />
            </RadioGroup>

                <TextView
                    android:id="@+id/lessonPlace_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/place_hint" />

                <EditText
                    android:id="@+id/lessonPlace_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Place" />

                <TextView
                    android:id="@+id/week_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/oddWeek_hint" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/oddWeek_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/odd_week" />

                <RadioButton
                    android:id="@+id/evenWeek_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/even_week" />

            </RadioGroup>

            <TextView
                android:id="@+id/lessonDay_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day_hint" />

            <EditText
                android:id="@+id/lessonDay_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Day" />

            <TextView
                android:id="@+id/lessonSection_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_hint" />

            <EditText
                android:id="@+id/lessonSection_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Section" />

            <TextView
                android:id="@+id/teacherName_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher_hint" />

            <EditText
                android:id="@+id/teacherName_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="TeacherName" />

            <Button
                android:id="@+id/complete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completeInput" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>